[project]
name = "py-redis-semaphore"
version = "0.1.1"
description = "Distributed semaphore and mutex with Redis and Sentinel support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "azhig", email = "azhig.dev@gmail.com" },
]
keywords = [
    "redis",
    "semaphore",
    "mutex",
    "distributed",
    "lock",
    "sentinel",
    "asyncio",
    "sync",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "redis>=5.0.0",
    "typing-extensions>=4.5.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/azhig/py-redis-semaphore"
Repository = "https://github.com/azhig/py-redis-semaphore"
Documentation = "https://github.com/azhig/py-redis-semaphore#readme"
Issues = "https://github.com/azhig/py-redis-semaphore/issues"
Changelog = "https://github.com/azhig/py-redis-semaphore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
prometheus = [
    "prometheus-client>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_semaphore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/redis_semaphore"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "T20",    # flake8-print
]
ignore = [
    "S101",   # assert allowed
    "S311",   # random not for crypto (OK for identifiers)
    "S324",   # SHA1 used for Redis EVALSHA, not crypto
    "RUF022", # __all__ sorted by sections with comments for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # asserts and hardcoded passwords OK in tests
"examples/**/*.py" = ["T201"]  # print OK in examples

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
